syntax = "proto3";

option csharp_namespace = "SaBooBo.Clients.Shared.User";

package user;

service UserGrpc {
  rpc GetUser (GetUserRequest) returns (UserResponse);
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
  rpc GetUsersByRole (GetUsersByRoleRequest) returns (UsersResponse);
  rpc ValidateUser (ValidateUserRequest) returns (ValidateUserResponse);
}

message GetUserRequest {
  string user_id = 1;
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string phone = 3;
  string password = 4;
  repeated string roles = 5;
  map<string, string> metadata = 6;
}

message UpdateUserRequest {
  string user_id = 1;
  optional string username = 2;
  optional string email = 3;
  optional string phone = 4;
  optional string password = 5;
  repeated string roles = 6;
  map<string, string> metadata = 7;
}

message DeleteUserRequest {
  string user_id = 1;
}

message DeleteUserResponse {
  bool success = 1;
  optional string error_message = 2;
}

message GetUsersByRoleRequest {
  string role = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message ValidateUserRequest {
  string username = 1;
  string password = 2;
}

message ValidateUserResponse {
  bool is_valid = 1;
  optional string user_id = 2;
  repeated string roles = 3;
  optional string error_message = 4;
}

message UserResponse {
  string user_id = 1;
  string username = 2;
  string email = 3;
  string phone = 4;
  repeated string roles = 5;
  map<string, string> metadata = 6;
  string created_at = 7;
  string updated_at = 8;
}

message UsersResponse {
  repeated UserResponse users = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
} 